modifications du systeme de restaurants

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-table": "^8.20.6",
     "apexcharts": "^4.7.0",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "cleave.js": "^1.6.0",
     "color": "^4.2.3",
     "dayjs": "^1.11.13",
